@@ -242,6 +242,9 @@ private:
 	set_coordIndex ();
 
 	void
+	set_coord (const X3D::SFNode &);
+
+	void
 	set_hitPoint (const X3D::Vector3f &);
 
 	void
